{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 46,
  "lineage": "26e02ca6-1da3-2338-3caf-4d13ec1c8870",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vmNic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9432f4f4-b485-4f38-ab19-4fa4614c3995/resourceGroups/arg-resources/providers/Microsoft.Network/networkInterfaces/int1-nic",
            "internal_domain_name_suffix": "ap01thwulzaejkghr14g112gxf.parx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9432f4f4-b485-4f38-ab19-4fa4614c3995/resourceGroups/arg-resources/providers/Microsoft.Network/publicIPAddresses/public-ip1",
                "subnet_id": "/subscriptions/9432f4f4-b485-4f38-ab19-4fa4614c3995/resourceGroups/arg-resources/providers/Microsoft.Network/virtualNetworks/vpc1-network/subnets/as-subnet1"
              }
            ],
            "location": "francecentral",
            "mac_address": "00-22-48-38-DC-E6",
            "name": "int1-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "arg-resources",
            "virtual_machine_id": "/subscriptions/9432f4f4-b485-4f38-ab19-4fa4614c3995/resourceGroups/arg-resources/providers/Microsoft.Compute/virtualMachines/instance-1"
          },
          "dependencies": [
            "azurerm_public_ip.aip1",
            "azurerm_resource_group.arg",
            "azurerm_subnet.as1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vmNic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9432f4f4-b485-4f38-ab19-4fa4614c3995/resourceGroups/arg-resources/providers/Microsoft.Network/networkInterfaces/int2-nic",
            "internal_domain_name_suffix": "ap01thwulzaejkghr14g112gxf.parx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9432f4f4-b485-4f38-ab19-4fa4614c3995/resourceGroups/arg-resources/providers/Microsoft.Network/publicIPAddresses/public-ip2",
                "subnet_id": "/subscriptions/9432f4f4-b485-4f38-ab19-4fa4614c3995/resourceGroups/arg-resources/providers/Microsoft.Network/virtualNetworks/vpc1-network/subnets/as-subnet1"
              }
            ],
            "location": "francecentral",
            "mac_address": "00-22-48-38-DA-AA",
            "name": "int2-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "arg-resources",
            "virtual_machine_id": "/subscriptions/9432f4f4-b485-4f38-ab19-4fa4614c3995/resourceGroups/arg-resources/providers/Microsoft.Compute/virtualMachines/instance-2"
          },
          "dependencies": [
            "azurerm_public_ip.aip2",
            "azurerm_resource_group.arg",
            "azurerm_subnet.as1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vmNic3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9432f4f4-b485-4f38-ab19-4fa4614c3995/resourceGroups/arg-resources/providers/Microsoft.Network/networkInterfaces/int3-nic",
            "internal_domain_name_suffix": "f4iak1xu55yermetgorqagpy2a.parx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9432f4f4-b485-4f38-ab19-4fa4614c3995/resourceGroups/arg-resources/providers/Microsoft.Network/publicIPAddresses/public-ip3",
                "subnet_id": "/subscriptions/9432f4f4-b485-4f38-ab19-4fa4614c3995/resourceGroups/arg-resources/providers/Microsoft.Network/virtualNetworks/vpc2-network/subnets/as-subnet2"
              }
            ],
            "location": "francecentral",
            "mac_address": "00-22-48-38-DB-6F",
            "name": "int3-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "arg-resources",
            "virtual_machine_id": "/subscriptions/9432f4f4-b485-4f38-ab19-4fa4614c3995/resourceGroups/arg-resources/providers/Microsoft.Compute/virtualMachines/instance-3"
          },
          "dependencies": [
            "azurerm_public_ip.aip3",
            "azurerm_resource_group.arg",
            "azurerm_subnet.as2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "ansg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9432f4f4-b485-4f38-ab19-4fa4614c3995/resourceGroups/arg-resources/providers/Microsoft.Network/networkSecurityGroups/ansg-security-group",
            "location": "francecentral",
            "name": "ansg-security-group",
            "resource_group_name": "arg-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rules-network",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.arg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ansgr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/9432f4f4-b485-4f38-ab19-4fa4614c3995/resourceGroups/arg-resources/providers/Microsoft.Network/networkSecurityGroups/ansg-security-group/securityRules/rules-network",
            "name": "rules-network",
            "network_security_group_name": "ansg-security-group",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "arg-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.ansg",
            "azurerm_resource_group.arg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "aip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/9432f4f4-b485-4f38-ab19-4fa4614c3995/resourceGroups/arg-resources/providers/Microsoft.Network/publicIPAddresses/public-ip1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.216.162.156",
            "ip_version": "IPv4",
            "location": "francecentral",
            "name": "public-ip1",
            "resource_group_name": "arg-resources",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.arg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "aip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/9432f4f4-b485-4f38-ab19-4fa4614c3995/resourceGroups/arg-resources/providers/Microsoft.Network/publicIPAddresses/public-ip2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.216.160.117",
            "ip_version": "IPv4",
            "location": "francecentral",
            "name": "public-ip2",
            "resource_group_name": "arg-resources",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.arg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "aip3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/9432f4f4-b485-4f38-ab19-4fa4614c3995/resourceGroups/arg-resources/providers/Microsoft.Network/publicIPAddresses/public-ip3",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.216.163.166",
            "ip_version": "IPv4",
            "location": "francecentral",
            "name": "public-ip3",
            "resource_group_name": "arg-resources",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.arg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "as1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9432f4f4-b485-4f38-ab19-4fa4614c3995/resourceGroups/arg-resources/providers/Microsoft.Network/virtualNetworks/vpc1-network/subnets/as-subnet1",
            "name": "as-subnet1",
            "resource_group_name": "arg-resources",
            "virtual_network_name": "vpc1-network"
          },
          "dependencies": [
            "azurerm_resource_group.arg",
            "azurerm_virtual_network.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "as2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9432f4f4-b485-4f38-ab19-4fa4614c3995/resourceGroups/arg-resources/providers/Microsoft.Network/virtualNetworks/vpc2-network/subnets/as-subnet2",
            "name": "as-subnet2",
            "resource_group_name": "arg-resources",
            "virtual_network_name": "vpc2-network"
          },
          "dependencies": [
            "azurerm_resource_group.arg",
            "azurerm_virtual_network.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9eb9f503-5ed4-4440-a8c7-8efc6def86bd",
            "id": "/subscriptions/9432f4f4-b485-4f38-ab19-4fa4614c3995/resourceGroups/arg-resources/providers/Microsoft.Network/virtualNetworks/vpc1-network",
            "location": "francecentral",
            "name": "vpc1-network",
            "resource_group_name": "arg-resources",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/9432f4f4-b485-4f38-ab19-4fa4614c3995/resourceGroups/arg-resources/providers/Microsoft.Network/virtualNetworks/vpc1-network/subnets/as-subnet1",
                "name": "as-subnet1"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.arg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6e05902f-fff4-48f0-b093-33a30019f8e0",
            "id": "/subscriptions/9432f4f4-b485-4f38-ab19-4fa4614c3995/resourceGroups/arg-resources/providers/Microsoft.Network/virtualNetworks/vpc2-network",
            "location": "francecentral",
            "name": "vpc2-network",
            "resource_group_name": "arg-resources",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/9432f4f4-b485-4f38-ab19-4fa4614c3995/resourceGroups/arg-resources/providers/Microsoft.Network/virtualNetworks/vpc2-network/subnets/as-subnet2",
                "name": "as-subnet2"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.arg"
          ]
        }
      ]
    }
  ]
}